# nebula-pty

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.md  binding.gyp  index.js  nebula-pty.cc  npmignore  package-lock.json  package.json  server.js
public/: index.html
public/script/: main.js
script/: check.bat  install-deps.js
src/: terminal.cc  terminal.h
src/Logger/: logger.cc  logger.h
src/win/: conpty.cc  conpty.h  path_util.cc  path_util.h
test/: test-interactive.js  test.js
test/electron/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js
